<resources>
    <string name="app_name">School Box</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone No.</string>
    <string name="email_">Email</string>
    <string name="nameview">nameView</string>
    <string name="_email_">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back :)</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user">User</string>
    <string name="already_have_an_account_login">Already Have an account?</string>
    <string name="_login">Login</string>
    <string name="school_box">School Box</string>
</resources>